src/main/java/ltl/parser/Parser.java
/* Parser.java */
/* Generated By:JavaCC: Do not edit this line. Parser.java */
package ltl.parser;

import com.google.common.collect.BiMap;
import com.google.common.collect.HashBiMap;
import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
import ltl.*;
import ltl.tlsf.*;

import java.io.StringReader;
import java.util.ArrayList;
import java.util.BitSet;
import java.util.Collection;

@SuppressFBWarnings
@SuppressWarnings("all")
public class Parser implements ParserConstants {
    public BiMap<String, Integer> map = HashBiMap.create();

    public static Formula formula(String s) {
        return formula(s, null);
    }

    public static Formula formula(String s, BiMap<String, Integer> mapping) {
        Parser parser = new Parser(new StringReader(s));

        if (mapping != null) {
            parser.map = mapping;
        }

        try {
            return parser.formula();
        } catch (ParseException e) {
            throw new RuntimeException(e);
        }
    }

  final public TLSF tlsf() throws ParseException {ImmutableTLSF.Builder builder = ImmutableTLSF.builder();
    String string;
    BitSet inputs = new BitSet();
    BitSet outputs = new BitSet();
    Collection<Formula> elements = new ArrayList<Formula>();
    Formula formula;
    map = HashBiMap.create();
    jj_consume_token(INFO);
    jj_consume_token(LCPAR);
    jj_consume_token(TITLE);
    string = string();
builder.title(string);
    jj_consume_token(DESCRIPTION);
    string = string();
builder.description(string);
    jj_consume_token(SEMANTICS);
    if (jj_2_1(2)) {
      jj_consume_token(MEALY);
builder.semantics(TLSF.Semantics.MEALY);
    } else if (jj_2_2(2)) {
      jj_consume_token(MOORE);
builder.semantics(TLSF.Semantics.MOORE);
    } else if (jj_2_3(2)) {
      jj_consume_token(MEALYSTRICT);
builder.semantics(TLSF.Semantics.MEALY_STRICT);
    } else if (jj_2_4(2)) {
      jj_consume_token(MOORESTRICT);
builder.semantics(TLSF.Semantics.MOORE_STRICT);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(TARGET);
    if (jj_2_5(2)) {
      jj_consume_token(MEALY);
builder.target(TLSF.Semantics.MEALY);
    } else if (jj_2_6(2)) {
      jj_consume_token(MOORE);
builder.target(TLSF.Semantics.MOORE);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(RCPAR);
    jj_consume_token(MAIN);
    jj_consume_token(LCPAR);
    jj_consume_token(INPUTS);
    jj_consume_token(LCPAR);
    label_1:
    while (true) {
      if (jj_2_7(2)) {
        ;
      } else {
        break label_1;
      }
      string = jj_consume_token(ID).image;
      jj_consume_token(SEMIC);
int id = map.size();
                map.put(string, id);
                inputs.set(id);
    }
    jj_consume_token(RCPAR);
    jj_consume_token(OUTPUTS);
    jj_consume_token(LCPAR);
    label_2:
    while (true) {
      if (jj_2_8(2)) {
        ;
      } else {
        break label_2;
      }
      string = jj_consume_token(ID).image;
      jj_consume_token(SEMIC);
int id = map.size();
                map.put(string, id);
                outputs.set(id);
    }
    jj_consume_token(RCPAR);
    label_3:
    while (true) {
      if (jj_2_15(2)) {
        jj_consume_token(INITIALLY);
        jj_consume_token(LCPAR);
        label_4:
        while (true) {
          if (jj_2_9(2)) {
            ;
          } else {
            break label_4;
          }
          formula = formulaEmbedded();
elements.add(formula);
        }
builder.initially(Conjunction.create(elements.stream()));
                elements.clear();
        jj_consume_token(RCPAR);
      } else if (jj_2_16(2)) {
        jj_consume_token(PRESET);
        jj_consume_token(LCPAR);
        label_5:
        while (true) {
          if (jj_2_10(2)) {
            ;
          } else {
            break label_5;
          }
          formula = formulaEmbedded();
elements.add(formula);
        }
builder.preset(Conjunction.create(elements.stream()));
                elements.clear();
        jj_consume_token(RCPAR);
      } else if (jj_2_17(2)) {
        jj_consume_token(REQUIRE);
        jj_consume_token(LCPAR);
        label_6:
        while (true) {
          if (jj_2_11(2)) {
            ;
          } else {
            break label_6;
          }
          formula = formulaEmbedded();
elements.add(formula);
        }
builder.require(Conjunction.create(elements.stream()));
                elements.clear();
        jj_consume_token(RCPAR);
      } else if (jj_2_18(2)) {
        jj_consume_token(ASSERT);
        jj_consume_token(LCPAR);
        label_7:
        while (true) {
          if (jj_2_12(2)) {
            ;
          } else {
            break label_7;
          }
          formula = formulaEmbedded();
elements.add(formula);
        }
builder.assert_(Conjunction.create(elements.stream()));
                elements.clear();
        jj_consume_token(RCPAR);
      } else if (jj_2_19(2)) {
        jj_consume_token(ASSUME);
        jj_consume_token(LCPAR);
        label_8:
        while (true) {
          if (jj_2_13(2)) {
            ;
          } else {
            break label_8;
          }
          formula = formulaEmbedded();
elements.add(formula);
        }
builder.assume(Conjunction.create(elements.stream()));
                elements.clear();
        jj_consume_token(RCPAR);
      } else if (jj_2_20(2)) {
        jj_consume_token(GUARANTEE);
        jj_consume_token(LCPAR);
        label_9:
        while (true) {
          if (jj_2_14(2)) {
            ;
          } else {
            break label_9;
          }
          formula = formulaEmbedded();
elements.add(formula);
        }
builder.guarantee(Conjunction.create(elements.stream()));
                elements.clear();
        jj_consume_token(RCPAR);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      if (jj_2_21(2)) {
        ;
      } else {
        break label_3;
      }
    }
    jj_consume_token(RCPAR);
builder.inputs(inputs);
        builder.outputs(outputs);
        builder.mapping(map);
        {if ("" != null) return builder.build();}
    throw new Error("Missing return statement in function");
  }

  final public Formula formulaEmbedded() throws ParseException {Formula f;
    f = disjunction();
    jj_consume_token(SEMIC);
{if ("" != null) return f;}
    throw new Error("Missing return statement in function");
  }

  final public Formula formula() throws ParseException {Formula f;
    f = disjunction();
    jj_consume_token(0);
{if ("" != null) return f;}
    throw new Error("Missing return statement in function");
  }

  final public Formula disjunction() throws ParseException {Formula left, right;
    left = conjunction();
    label_10:
    while (true) {
      if (jj_2_22(2)) {
        ;
      } else {
        break label_10;
      }
      jj_consume_token(OR);
      right = conjunction();
left = Disjunction.create(left, right);
    }
{if ("" != null) return left;}
    throw new Error("Missing return statement in function");
  }

  final public Formula conjunction() throws ParseException {Formula left, right;
    left = binaryOp();
    label_11:
    while (true) {
      if (jj_2_23(2)) {
        ;
      } else {
        break label_11;
      }
      jj_consume_token(AND);
      right = binaryOp();
left = Conjunction.create(left, right);
    }
{if ("" != null) return left;}
    throw new Error("Missing return statement in function");
  }

  final public Formula binaryOp() throws ParseException {Formula left;
    Formula right;
    left = unaryOp();
    if (jj_2_31(2)) {
      if (jj_2_24(2)) {
        jj_consume_token(IMP);
        right = unaryOp();
left = Disjunction.create(left.not(), right);
      } else if (jj_2_25(2)) {
        jj_consume_token(BIIMP);
        right = unaryOp();
left = Conjunction.create(Disjunction.create(left.not(), right), Disjunction.create(left, right.not()));
      } else if (jj_2_26(2)) {
        jj_consume_token(MOP);
        right = unaryOp();
left = MOperator.create(left, right);
      } else if (jj_2_27(2)) {
        jj_consume_token(UOP);
        right = unaryOp();
left = UOperator.create(left, right);
      } else if (jj_2_28(2)) {
        jj_consume_token(ROP);
        right = unaryOp();
left = ROperator.create(left, right);
      } else if (jj_2_29(2)) {
        jj_consume_token(VOP);
        right = unaryOp();
left = ROperator.create(left, right);
      } else if (jj_2_30(2)) {
        jj_consume_token(WOP);
        right = unaryOp();
left = WOperator.create(left, right);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      ;
    }
{if ("" != null) return left;}
    throw new Error("Missing return statement in function");
  }

  final public Formula unaryOp() throws ParseException {Formula f;
    String number = null;
    Comparison op = null;
    FrequencyG.Limes limes = null;
    if (jj_2_35(2)) {
      jj_consume_token(FOP);
      f = unaryOp();
{if ("" != null) return new FOperator(f);}
    } else if (jj_2_36(2)) {
      jj_consume_token(GOP);
      if (jj_2_34(2)) {
        jj_consume_token(LCPAR);
        if (jj_2_33(2)) {
          jj_consume_token(SUP);
limes = FrequencyG.Limes.SUP;
        } else {
          if (jj_2_32(2)) {
            jj_consume_token(INF);
          } else {
            ;
          }
limes = FrequencyG.Limes.INF;
        }
        op = comp();
        number = jj_consume_token(NUMBER).image;
        jj_consume_token(RCPAR);
      } else {
        ;
      }
      f = unaryOp();
if (op != null) {
                double bound = Double.parseDouble(number);
                FrequencyG.Comparison comp = null;

                switch (op) {
                    case LEQ:
                        bound = 1 - bound;
                        comp = FrequencyG.Comparison.GT;
                        f = f.not();
                        break;

                    case LT:
                        bound = 1 - bound;
                        comp = FrequencyG.Comparison.GEQ;
                        f = f.not();
                        break;

                    case GEQ:
                        comp = FrequencyG.Comparison.GEQ;
                        break;

                    case GT:
                        comp = FrequencyG.Comparison.GT;
                        break;

                    default:
                        {if (true) throw new IllegalStateException();}
                }

                {if ("" != null) return new FrequencyG(f, bound, comp, limes);}
            }

            {if ("" != null) return new GOperator(f);}
    } else if (jj_2_37(2)) {
      jj_consume_token(XOP);
      f = unaryOp();
{if ("" != null) return new XOperator(f);}
    } else if (jj_2_38(2)) {
      jj_consume_token(NEG);
      f = unaryOp();
{if ("" != null) return f.not();}
    } else if (jj_2_39(2)) {
      f = atom();
{if ("" != null) return f;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Formula atom() throws ParseException {String atomString;
    Formula f;
    if (jj_2_40(2)) {
      jj_consume_token(TRUE);
{if ("" != null) return BooleanConstant.TRUE;}
    } else if (jj_2_41(2)) {
      jj_consume_token(FALSE);
{if ("" != null) return BooleanConstant.FALSE;}
    } else if (jj_2_42(2)) {
      atomString = jj_consume_token(ID).image;
if (!map.containsKey(atomString)) {
            map.put(atomString, map.size());
        }

        {if ("" != null) return new Literal(map.get(atomString));}
    } else if (jj_2_43(2)) {
      jj_consume_token(LPAR);
      f = disjunction();
      jj_consume_token(RPAR);
{if ("" != null) return f;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Comparison comp() throws ParseException {
    if (jj_2_44(2)) {
      jj_consume_token(GEQ);
{if ("" != null) return Comparison.GEQ;}
    } else if (jj_2_45(2)) {
      jj_consume_token(GT);
{if ("" != null) return Comparison.GT;}
    } else if (jj_2_46(2)) {
      jj_consume_token(LEQ);
{if ("" != null) return Comparison.LEQ;}
    } else if (jj_2_47(2)) {
      jj_consume_token(LT);
{if ("" != null) return Comparison.LT;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

/**
 * Match a quoted string.
 */
  final public String string() throws ParseException {StringBuilder builder = new StringBuilder();
    jj_consume_token(QUOTE);
    label_12:
    while (true) {
      if (jj_2_48(2)) {
        ;
      } else {
        break label_12;
      }
      getChar(builder);
    }
    jj_consume_token(ENDQUOTE);
{if ("" != null) return builder.toString();}
    throw new Error("Missing return statement in function");
  }

/**
 * Match char inside quoted string.
 */
  final public void getChar(StringBuilder builder) throws ParseException {Token t;
    if (jj_2_49(2)) {
      t = jj_consume_token(CHAR);
    } else if (jj_2_50(2)) {
      t = jj_consume_token(CNTRL_ESC);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
if (t.image.length() < 2)
    {
      // CHAR
      builder.append(t.image.charAt(0));
    }
    else if (t.image.length() < 6)
    {
      // ESC
      char c = t.image.charAt(1);
      switch (c)
      {
        case 'b': builder.append((char) 8); break;
        case 'f': builder.append((char) 12); break;
        case 'n': builder.append((char) 10); break;
        case 'r': builder.append((char) 13); break;
        case 't': builder.append((char) 9); break;
        default: builder.append(c);
      }
    }
  }

  private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_2_11(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  private boolean jj_2_12(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  private boolean jj_2_13(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  private boolean jj_2_14(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  private boolean jj_2_15(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  private boolean jj_2_16(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  private boolean jj_2_17(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  private boolean jj_2_18(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  private boolean jj_2_19(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  private boolean jj_2_20(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  private boolean jj_2_21(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  private boolean jj_2_22(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  private boolean jj_2_23(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  private boolean jj_2_24(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_24(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  private boolean jj_2_25(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_25(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  private boolean jj_2_26(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_26(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  private boolean jj_2_27(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_27(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  private boolean jj_2_28(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_28(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }

  private boolean jj_2_29(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_29(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(28, xla); }
  }

  private boolean jj_2_30(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_30(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(29, xla); }
  }

  private boolean jj_2_31(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_31(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(30, xla); }
  }

  private boolean jj_2_32(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_32(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(31, xla); }
  }

  private boolean jj_2_33(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_33(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(32, xla); }
  }

  private boolean jj_2_34(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_34(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(33, xla); }
  }

  private boolean jj_2_35(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_35(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(34, xla); }
  }
